# buildstock-fetch

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Justfile  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  install-prek.sh  install-python-deps.sh  postCreateCommand.sh
.github/ISSUE_TEMPLATE/: switchbox-issue-template.md  switchbox-issue-template.yaml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
buildstock_fetch/: __init__.py  __main__.py  annualcurves.py  building.py  building_.py  constants.py  energymodels.py  ev_demand.py  exception.py  explore.py  io.py  lakemap.py  loadcurves.py  main.py  main_cli.py  main_new.py  metadata.py  mixed_upgrade.py  progress.py  questionary.py  read.py  releases.py  scenarios.py  shared.py  statecode.py  tripschedules.py  types.py  utils.py  weather.py
buildstock_fetch/building/: _15_min_load_curve.py  __init__.py  annual_load_curve.py  annualcurve.py  annualcurvefilename.py  buildingdataurl.py  data_url.py  get15minurl.py  metadata.py  metadataurl.py  weather.py  weatherurl.py
buildstock_fetch/cli/: availability.py  inputs.py  main.py  questionary.py  releases.py  validate.py
buildstock_fetch/data/: SB_analysis_upgrades.json  buildstock_releases.json  buildstock_upgrades_lookup.json
buildstock_fetch/data/load_curve_column_map/: 2022_resstock_load_curve_columns.csv  2024_resstock_load_curve_columns.csv  com_2024_amy2018_2.csv  data_dictionary_2024_load_curve_annual_labeled.csv  data_dictionary_2024_load_curve_labeled.csv  data_dictionary_2024_metadata_and_annual_labeled.csv  data_dictionary_2024_metadata_labeled.csv  res_2022_amy2012_1.1.csv  res_2022_amy2018_1.1.csv  res_2022_tmy3_1.csv  res_2024_amy2018_2.csv  res_2024_tmy3_2.csv
buildstock_fetch/data/weather_station_map/: weather_station_map.parquet
buildstock_fetch/enhancements/: SB_upgrades.py
buildstock_fetch/utils/: assess_vehicle_assign_fit.py  build_metadata_tables.py  buildstock_releases.json  ev_utils.py  resolve_bldgid_sets.py
data/com_2023_amy2018_1/load_curve_annual/state=DE/upgrade=01/: DE_upgrade01_metadata_and_annual_results.parquet
data/res_2021_tmy3_1/load_curve_15min/state=CA/upgrade=00/: bldg0179196_load_curve_15min.parquet  bldg0188121_load_curve_15min.parquet  bldg0188127_load_curve_15min.parquet
data/res_2022_amy2012_1/weather/state=NY/upgrade=00/: G3600010.csv
data/res_2024_amy2018_2/load_curve_15min/AL/up00/: bldg0202404-up00_load_curve_monthly.parquet  bldg0252553-up00_load_curve_monthly.parquet
data/res_2024_amy2018_2/load_curve_15min/WY/up00/: bldg0232105-up00_load_curve_monthly.parquet  bldg0440726-up00_load_curve_monthly.parquet
data/res_2024_tmy3_2/load_curve_15min/AL/up00/: bldg0286593-up00_load_curve_monthly.parquet  bldg0426780-up00_load_curve_monthly.parquet  bldg0475094-up00_load_curve_monthly.parquet  bldg0495747-up00_load_curve_monthly.parquet
data/res_2024_tmy3_2/load_curve_15min/AL/up01/: bldg0348976-up01_load_curve_monthly.parquet  bldg0411687-up01_load_curve_monthly.parquet
data/res_2024_tmy3_2/load_curve_monthly/AL/up00/: bldg0462978-up00_load_curve_monthly.parquet  bldg0495664-up00_load_curve_monthly.parquet
data/res_2024_tmy3_2/load_curve_monthly/RI/up00/: bldg0028265-up00_load_curve_monthly.parquet  bldg0261067-up00_load_curve_monthly.parquet
data/res_2024_tmy3_2/load_curve_monthly/state=RI/up00/: bldg0368302_load_curve_monthly.parquet  bldg0540521_load_curve_monthly.parquet
data/res_2024_tmy3_2/load_curve_monthly/state=RI/up01/: bldg0368302_load_curve_monthly.parquet  bldg0540521_load_curve_monthly.parquet
data/res_2024_tmy3_2/load_curve_monthly/state=RI/up02/: bldg0368302_load_curve_monthly.parquet  bldg0540521_load_curve_monthly.parquet
data/res_2024_tmy3_2/trip_schedules/NY/: trip_schedules.parquet
data/res_2024_tmy3_2/trip_schedules/state=NY/: trip_schedules.parquet
docs/: enhancements.md  index.md  mixed_upgrades.md  modules.md  usage.md
enhancements/: index.html
mixed_upgrades/: index.html
modules/: index.html
search/: search_index.json
tests/: conftest.py  test_SB_upgrade.py  test_building.py  test_buildingid.py  test_ev_demand.py  test_ev_demand_utils.py  test_ev_utils.py  test_explore.py  test_io.py  test_lakemap.py  test_main.py  test_main_.py  test_main_cli.py  test_mixed_upgrade.py  test_read.py  test_release.py  test_scenarios.py  test_types.py  test_veh_assignment.py  test_weather_mapping.py
tests/data/: buildings_example_data.json  buildings_example_data.json.REMOVED.git-id  y2021_expected_individual_buildings_timeseries_columns.json  y2021_metadata_columns.json
usage/: index.html
utils/: 2024_resstock_load_curve_columns.csv  __init__.py  assess_vehicle_assign_fit.py  build_metadata_tables.py  build_test_data.py  buildstock_releases.json  ev_demand.py  ev_utils.py  resolve_bldgid_sets.py  resolve_weather_station_id.py
utils/building_data/combined_metadata.parquet/product=comstock/release_year=2021/weather_file=amy2018/release_version=1/state=Alaska/: d1454abff0d94c8090af7b3e923c473b-0.parquet  dcd864cc169b4695be2b9775b1a054ae-0.parquet
utils/building_data/combined_metadata.parquet/product=comstock/release_year=2021/weather_file=amy2018/release_version=1/state=Arizona/: dcd864cc169b4695be2b9775b1a054ae-0.parquet
utils/building_data/combined_metadata.parquet/product=comstock/release_year=2021/weather_file=amy2018/release_version=1/state=Arkansas/: dcd864cc169b4695be2b9775b1a054ae-0.parquet
utils/building_data/combined_metadata.parquet/product=comstock/release_year=2021/weather_file=amy2018/release_version=1/state=California/: d1454abff0d94c8090af7b3e923c473b-0.parquet  dcd864cc169b4695be2b9775b1a054ae-0.parquet
utils/building_data/combined_metadata.parquet/product=comstock/release_year=2021/weather_file=amy2018/release_version=1/state=Delaware/: d1454abff0d94c8090af7b3e923c473b-0.parquet  dcd864cc169b4695be2b9775b1a054ae-0.parquet
utils/ev_data/inputs/: download_2022_nhts_data.py  download_nhts_data.py
(+2735 files in other folders)
